--- a/scss/modules/_layers.scss
+++ b/scss/modules/_layers.scss
@@ -18,12 +18,44 @@
     margin: 0;
 }
 
-.layer, .page {
+%container {
+    width: 100%;
+    @if $container-max-width or $container-min-width {
+        max-width: $container-max-width;
+        min-width: $container-min-width;
+        margin-left: auto;
+        margin-right: auto;
+    }
+}
+
+%page {
+    position: absolute;
+    min-height: 100%;
+    min-width: 100%;
+    top: 0;
+    left: 0;
+    margin: 0;
+}
+
+// .layer, .page {
+.layer {
     @extend %layer;
 
     &.scroll { @extend %scroll; }
+
+    > .page {
+        @extend %page;
+    }
 }
 
 .scroll {
     @extend %scroll;
+}
+
+.container {
+    @extend %container;
+
+    > .page {
+        @extend %page;
+    }
 }
