--- a/scss/modules/_forms.scss
+++ b/scss/modules/_forms.scss
@@ -38,6 +38,12 @@
         @include typeScale($field-label-type-scale);
     }
 
+    input[type=checkbox], input[type=radio] {
+        + label {
+            @extend %inline-block;
+        }
+    }
+
     // Custom select styling
     // TEMPORARY! TODO: move to another module
     .select {
