--- a/scss/modules/_fieldsets.scss
+++ b/scss/modules/_fieldsets.scss
@@ -7,6 +7,7 @@
     margin-bottom: $fieldset-margin-bottom;
 
     legend {
+        padding: $field-padding-vertical $field-padding-horizontal;
         margin-bottom: $legend-margin-bottom;
     }
 
