Initial Commit for type module

--- a/scss/cadenza.scss
+++ b/scss/cadenza.scss
@@ -17,7 +17,7 @@
     'modules/_media',
     'modules/grid/_module',
     'modules/_layers',
-    'modules/_type',
+    'modules/type/_module',
     'modules/_anchors',
     'modules/_nav',
     'modules/_tabs',
