--- a/css/cadenza.css
+++ b/css/cadenza.css
@@ -1,7 +1,5 @@
 /* Import Settings */
 /* Import Modules */
-@import url("//fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,700italic,400,300,700");
-@import url("");
 /* line 34, ../scss/modules/_themes.scss */
 .theme-primary {
   background-color: navy;
@@ -157,7 +155,7 @@ input, button, textarea, select {
 }
 
 /* line 54, ../scss/modules/_layout.scss */
-.inline-block-all > *, .valign-center-all > *, nav.horizontal > ul > li > a > *, .inline-block, body h1.inline, body h2.inline, body h3.inline, body h4.inline, body h5.inline, body h6.inline, body h1.valign-center-all > *, body h2.valign-center-all > *, body h3.valign-center-all > *, body h4.valign-center-all > *, body h5.valign-center-all > *, body h6.valign-center-all > *, nav ul li > a > *, nav.vertical ul li > a > *, .dropdown ul li > a > *, nav ul li > a > .badge, nav.vertical ul li > a > .badge, .dropdown ul li > a > .badge, nav ul li > a > .label, nav.vertical ul li > a > .label, .dropdown ul li > a > .label, form input[type=checkbox] + label, body input[type=checkbox] + label, form input[type=radio] + label, body input[type=radio] + label {
+.inline-block-all > *, .valign-center-all > *, nav.horizontal > ul > li > a > *, .inline-block, nav ul li > a > *, nav.vertical ul li > a > *, .dropdown ul li > a > *, nav ul li > a > .badge, nav.vertical ul li > a > .badge, .dropdown ul li > a > .badge, nav ul li > a > .label, nav.vertical ul li > a > .label, .dropdown ul li > a > .label, form input[type=checkbox] + label, body input[type=checkbox] + label, form input[type=radio] + label, body input[type=radio] + label {
   display: inline-block;
   width: auto;
   margin-top: 0;
@@ -3812,320 +3810,6 @@ header:after, footer:after, section:after {
   margin: 0;
 }
 
-/* line 5, ../scss/modules/_type.scss */
-body {
-  font-family: "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
-}
-
-/* line 13, ../scss/modules/_type.scss */
-.type-secondary {
-  font-family: Georgia, Times, "Times New Roman", serif;
-}
-
-/* line 86, ../scss/modules/_type.scss */
-html {
-  font-size: 16px;
-}
-
-/* line 90, ../scss/modules/_type.scss */
-body {
-  font-style: normal;
-  color: #222222;
-  text-rendering: optimizeLegibility;
-  word-wrap: break-word;
-  -webkit-hyphens: auto;
-  -moz-hyphens: auto;
-  -ms-hyphens: auto;
-  -o-hyphens: auto;
-  hyphens: auto;
-}
-/* line 28, ../scss/modules/_type.scss */
-body h1, body h2, body h3, body h4, body h5, body h6 {
-  line-height: 1.2;
-  font-weight: 300;
-  font-style: normal;
-  font-family: "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
-  color: #222222;
-  margin-top: 0;
-  margin-bottom: 1rem;
-}
-/* line 37, ../scss/modules/_type.scss */
-body h1.subheader, body h2.subheader, body h3.subheader, body h4.subheader, body h5.subheader, body h6.subheader {
-  color: #484848;
-  font-weight: 300;
-  margin-top: 0;
-  margin-bottom: 1rem;
-}
-/* line 44, ../scss/modules/_type.scss */
-body h1.inline, body h2.inline, body h3.inline, body h4.inline, body h5.inline, body h6.inline {
-  margin-bottom: 0;
-  margin-top: 0;
-}
-/* line 50, ../scss/modules/_type.scss */
-body h1 small, body h1 .small, body h1 small, body h1 form input[type].small, form body h1 input[type].small, body h1 input[type].small, body h1 form textarea.small, form body h1 textarea.small, body h1 textarea.small, body h2 small, body h2 .small, body h2 small, body h2 form input[type].small, form body h2 input[type].small, body h2 input[type].small, body h2 form textarea.small, form body h2 textarea.small, body h2 textarea.small, body h3 small, body h3 .small, body h3 small, body h3 form input[type].small, form body h3 input[type].small, body h3 input[type].small, body h3 form textarea.small, form body h3 textarea.small, body h3 textarea.small, body h4 small, body h4 .small, body h4 small, body h4 form input[type].small, form body h4 input[type].small, body h4 input[type].small, body h4 form textarea.small, form body h4 textarea.small, body h4 textarea.small, body h5 small, body h5 .small, body h5 small, body h5 form input[type].small, form body h5 input[type].small, body h5 input[type].small, body h5 form textarea.small, form body h5 textarea.small, body h5 textarea.small, body h6 small, body h6 .small, body h6 small, body h6 form input[type].small, form body h6 input[type].small, body h6 input[type].small, body h6 form textarea.small, form body h6 textarea.small, body h6 textarea.small {
-  font-size: 74.13723%;
-  color: gray;
-}
-/* line 55, ../scss/modules/_type.scss */
-body h1:only-child, body h2:only-child, body h3:only-child, body h4:only-child, body h5:only-child, body h6:only-child {
-  margin-bottom: 0;
-}
-/* line 59, ../scss/modules/_type.scss */
-body h1.valign-center-all > *, body h2.valign-center-all > *, body h3.valign-center-all > *, body h4.valign-center-all > *, body h5.valign-center-all > *, body h6.valign-center-all > * {
-  vertical-align: middle;
-  margin-top: 0;
-  margin-bottom: 0;
-}
-/* line 68, ../scss/modules/_type.scss */
-body h1 {
-  font-size: 33.80875px ;
-  font-size: 2.11305rem ;
-}
-/* line 68, ../scss/modules/_type.scss */
-body h2 {
-  font-size: 29.11034px ;
-  font-size: 1.8194rem ;
-}
-/* line 68, ../scss/modules/_type.scss */
-body h3 {
-  font-size: 25.06487px ;
-  font-size: 1.56655rem ;
-}
-/* line 68, ../scss/modules/_type.scss */
-body h4 {
-  font-size: 21.5816px ;
-  font-size: 1.34885rem ;
-}
-/* line 68, ../scss/modules/_type.scss */
-body h5 {
-  font-size: 18.5824px ;
-  font-size: 1.1614rem ;
-}
-/* line 68, ../scss/modules/_type.scss */
-body h6 {
-  font-size: 16px ;
-  font-size: 1rem ;
-  text-transform: uppercase;
-}
-/* line 77, ../scss/modules/_type.scss */
-body hgroup {
-  margin-bottom: 1rem;
-}
-/* line 78, ../scss/modules/_type.scss */
-body hgroup > h1, body hgroup > h2, body hgroup > h3, body hgroup > h4, body hgroup > h5, body hgroup > h6 {
-  margin-bottom: 0;
-}
-
-/* line 105, ../scss/modules/_type.scss */
-p {
-  margin-bottom: 1rem;
-  line-height: 1.5;
-  font-weight: 300;
-}
-/* line 110, ../scss/modules/_type.scss */
-p.lead {
-  font-size: 18.5824px ;
-  font-size: 1.1614rem ;
-}
-
-/* line 116, ../scss/modules/_type.scss */
-.strong {
-  font-weight: bold;
-}
-
-/* line 119, ../scss/modules/_type.scss */
-.small, small, form input[type].small, body input[type].small, form textarea.small, body textarea.small {
-  font-size: 13.77648px ;
-  font-size: 0.86103rem ;
-}
-
-/* line 122, ../scss/modules/_type.scss */
-.large, form input[type].large, body input[type].large, form textarea.large, body textarea.large {
-  font-size: 18.5824px ;
-  font-size: 1.1614rem ;
-}
-
-/* line 146, ../scss/modules/_type.scss */
-ul.clean, nav ul, nav.vertical ul, .dropdown ul, ol.clean, dl.clean, .dropdown {
-  list-style: none;
-  margin-left: 0;
-}
-
-/* line 150, ../scss/modules/_type.scss */
-ul, ol, dl {
-  list-style-position: outside;
-  margin-bottom: 1rem;
-  padding: 0;
-}
-/* line 158, ../scss/modules/_type.scss */
-ul.inline, ol.inline, dl.inline {
-  margin-left: 0;
-}
-/* line 161, ../scss/modules/_type.scss */
-ul.inline > li, ol.inline > li, dl.inline > li {
-  display: inline-block;
-  margin-right: 1rem;
-}
-/* line 169, ../scss/modules/_type.scss */
-ul ul, ul ol, ul dl, ol ul, ol ol, ol dl, dl ul, dl ol, dl dl {
-  margin-bottom: 0;
-}
-
-/* line 174, ../scss/modules/_type.scss */
-ul {
-  margin-left: 1rem;
-}
-/* line 177, ../scss/modules/_type.scss */
-ul.square {
-  list-style-type: square;
-}
-/* line 140, ../scss/modules/_type.scss */
-ul.square ul, ul.square ol {
-  list-style: inherit;
-}
-/* line 178, ../scss/modules/_type.scss */
-ul.circle {
-  list-style-type: circle;
-}
-/* line 140, ../scss/modules/_type.scss */
-ul.circle ul, ul.circle ol {
-  list-style: inherit;
-}
-/* line 179, ../scss/modules/_type.scss */
-ul.disc {
-  list-style-type: disc;
-}
-/* line 140, ../scss/modules/_type.scss */
-ul.disc ul, ul.disc ol {
-  list-style: inherit;
-}
-
-/* line 182, ../scss/modules/_type.scss */
-ol {
-  margin-left: 1.4rem;
-}
-
-/* line 186, ../scss/modules/_type.scss */
-li {
-  list-style-position: outside;
-}
-
-/* line 191, ../scss/modules/_type.scss */
-dl dt {
-  font-weight: bold;
-  margin-bottom: 0.5rem;
-}
-/* line 195, ../scss/modules/_type.scss */
-dl dd {
-  margin-bottom: 0.5rem;
-}
-
-/* line 202, ../scss/modules/_type.scss */
-ul.inline > li, ol.inline > li, dl.inline > li, .nowrap, nav ul li, nav.vertical ul li, .dropdown ul li, .label, .badge {
-  white-space: nowrap;
-  overflow: hidden;
-}
-
-/* line 212, ../scss/modules/_type.scss */
-.align-left {
-  text-align: left;
-}
-
-/* line 213, ../scss/modules/_type.scss */
-.align-right {
-  text-align: right;
-}
-
-/* line 214, ../scss/modules/_type.scss */
-.align-center {
-  text-align: center;
-}
-
-/* line 215, ../scss/modules/_type.scss */
-.align-justify {
-  text-align: justify;
-}
-
-/* line 218, ../scss/modules/_type.scss */
-.uppercase {
-  text-transform: uppercase;
-}
-
-/* line 219, ../scss/modules/_type.scss */
-.lowercase {
-  text-transform: lowercase;
-}
-
-/* line 222, ../scss/modules/_type.scss */
-abbr, acronym, blockquote, code, dir, kbd, listing, plaintext, q, samp, tt, var, xmp {
-  -webkit-hyphens: none;
-  -moz-hyphens: none;
-  -ms-hyphens: none;
-  -o-hyphens: none;
-  hyphens: none;
-}
-
-/* line 227, ../scss/modules/_type.scss */
-pre {
-  white-space: pre;
-  color: #222222;
-  font-size: 16px ;
-  font-size: 1rem ;
-  font-family: monospace;
-}
-/* line 233, ../scss/modules/_type.scss */
-pre code {
-  word-wrap: normal;
-  white-space: -moz-pre-wrap;
-  white-space: pre-wrap;
-}
-
-/* line 240, ../scss/modules/_type.scss */
-code {
-  white-space: pre;
-  color: #222222;
-  font-size: 13.77648px ;
-  font-size: 0.86103rem ;
-  font-family: monospace;
-}
-
-/* line 248, ../scss/modules/_type.scss */
-blockquote {
-  color: #484848;
-  padding: 1rem;
-  border-left: 1px solid #484848;
-  margin-bottom: 1rem;
-}
-/* line 254, ../scss/modules/_type.scss */
-blockquote cite {
-  display: block;
-  font-size: 13.77648px ;
-  font-size: 0.86103rem ;
-  color: #484848;
-}
-/* line 260, ../scss/modules/_type.scss */
-blockquote p {
-  color: #484848;
-}
-
-/* line 266, ../scss/modules/_type.scss */
-hr {
-  clear: both;
-  height: 0;
-  margin: 0.5rem 0;
-  border-style: solid;
-  border-color: #959595;
-  border-width: 1px 0 0;
-}
-
-/* line 276, ../scss/modules/_type.scss */
-abbr, acronym {
-  font-size: 86.10298%;
-  text-transform: uppercase;
-  border-bottom: 1px dotted gray;
-  cursor: help;
-}
-
 /* line 24, ../scss/modules/_anchors.scss */
 a {
   text-decoration: none;
@@ -4435,7 +4119,7 @@ button, .button, input[type=button], input[type=submit], .button-group > label, 
   text-decoration: none;
 }
 /* line 27, ../scss/modules/_buttons.scss */
-small.button, form input[type].small.button, body input[type].small.button, form input[type].small[type=button], body input[type].small[type=button], form input[type].small[type=submit], body input[type].small[type=submit], form textarea.small.button, body textarea.small.button, button.small, .small.button, input.small[type=button], input.small[type=submit], .button-group > label.small {
+form input[type].small.button, body input[type].small.button, form input[type].small[type=button], body input[type].small[type=button], form input[type].small[type=submit], body input[type].small[type=submit], form textarea.small.button, body textarea.small.button, button.small, .small.button, input.small[type=button], input.small[type=submit], .button-group > label.small {
   padding: 0.25rem 0.5rem;
   font-size: 11.86196px ;
   font-size: 0.74137rem ;
